--- a/public/css/index.css
+++ b/public/css/index.css
@@ -49,7 +49,7 @@ button#btnShowContact {
         letter-spacing: 3px;
         position: relative;
         overflow: hidden;
-        margin-left: -133px;
+        margin-left: -14%;
         margin-top: 15px;
     }
 
