--- a/public/css/index.css
+++ b/public/css/index.css
@@ -316,3 +316,9 @@ h1.end {
 .row-only > *{
     font-size: 50px !important;
 }
+
+.footer{
+    position: fixed !important;
+    width: 100% !important;
+    bottom: 0px !important;
+}
