--- a/front/src/index.css
+++ b/front/src/index.css
@@ -24,11 +24,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 0px !important;
+  padding: 0px !important;
+  width: 100vw !important;
+  height: 100vh  !important;
+  overflow: hidden;
 }
 
 h1 {
