--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgb(18,14,22);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,7 +28,7 @@ body {
   padding: 0px !important;
   width: 100vw !important;
   height: 100vh  !important;
-  overflow: hidden;
+  overflow: hide;
 }
 
 h1 {
