--- a/front/src/index.css
+++ b/front/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(18,14,22);
+  background-color: #202124;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
